--- a/QuollEyeTree copy-Info.plist
+++ b/QuollEyeTree copy-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIconFile</key>
 	<string>ghostgum.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>au.id.binnie.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -21,17 +21,17 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.03V alpha</string>
+	<string>2.05 beta</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>80</string>
+	<string>93</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.productivity</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>©2011-2014 Ian Binnie</string>
+	<string>©2011-2016 Ian Binnie</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
